grammar.output
Terminals which are not used

   LT_OP
   GT_OP
   TIMES


State 377 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | translation_unit

    3 primary_expression: ID
    4                   | CONSTANT
    5                   | STRING_LITERAL
    6                   | LPAREN expression RPAREN

    7 postfix_expression: primary_expression
    8                   | postfix_expression LBRACK expression RBRACK
    9                   | postfix_expression LPAREN RPAREN
   10                   | postfix_expression LPAREN argument_expression_list RPAREN
   11                   | postfix_expression DOT ID
   12                   | postfix_expression PTR_OP ID
   13                   | postfix_expression INC_OP
   14                   | postfix_expression DEC_OP
   15                   | LPAREN type_name RPAREN LBRACE initializer_list RBRACE
   16                   | LPAREN type_name RPAREN LBRACE initializer_list COMMA RBRACE

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list COMMA assignment_expression

   19 unary_expression: postfix_expression
   20                 | INC_OP unary_expression
   21                 | DEC_OP unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF LPAREN type_name RPAREN

   25 unary_operator: AMPERSAND
   26               | ASTERISK
   27               | PLUS
   28               | MINUS
   29               | TILDE
   30               | EXCLAMATION

   31 cast_expression: unary_expression
   32                | LPAREN type_name RPAREN cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression ASTERISK cast_expression
   35                          | multiplicative_expression DIVIDE cast_expression
   36                          | multiplicative_expression MOD cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression PLUS multiplicative_expression
   39                    | additive_expression MINUS multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LEFT_OP additive_expression
   42                 | shift_expression RIGHT_OP additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression '<' shift_expression
   45                      | relational_expression '>' shift_expression
   46                      | relational_expression LE_OP shift_expression
   47                      | relational_expression GE_OP shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression EQ_OP relational_expression
   50                    | equality_expression NEQ_OP relational_expression

   51 and_expression: equality_expression
   52               | and_expression AMPERSAND equality_expression

   53 exclusive_or_expression: and_expression
   54                        | exclusive_or_expression POW and_expression

   55 inclusive_or_expression: exclusive_or_expression
   56                        | inclusive_or_expression VERTICAL_BAR exclusive_or_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression AND_OP inclusive_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression OR_OP logical_and_expression

   61 conditional_expression: logical_or_expression
   62                       | logical_or_expression QUESTION expression COLON conditional_expression

   63 assignment_expression: conditional_expression
   64                      | unary_expression assignment_operator assignment_expression

   65 assignment_operator: ASSIGN
   66                    | MUL_ASSIGN
   67                    | DIV_ASSIGN
   68                    | MOD_ASSIGN
   69                    | ADD_ASSIGN
   70                    | SUB_ASSIGN
   71                    | LEFT_ASSIGN
   72                    | RIGHT_ASSIGN
   73                    | AND_ASSIGN
   74                    | XOR_ASSIGN
   75                    | OR_ASSIGN

   76 expression: assignment_expression
   77           | expression COMMA assignment_expression

   78 constant_expression: conditional_expression

   79 declaration: declaration_specifiers SEMICOLON
   80            | declaration_specifiers init_declarator_list SEMICOLON

   81 declaration_specifiers: storage_class_specifier
   82                       | storage_class_specifier declaration_specifiers
   83                       | type_specifier
   84                       | type_specifier declaration_specifiers
   85                       | type_qualifier
   86                       | type_qualifier declaration_specifiers
   87                       | function_specifier
   88                       | function_specifier declaration_specifiers

   89 init_declarator_list: init_declarator
   90                     | init_declarator_list COMMA init_declarator

   91 init_declarator: declarator
   92                | declarator ASSIGN initializer

   93 storage_class_specifier: TYPEDEF
   94                        | EXTERN
   95                        | STATIC
   96                        | AUTO
   97                        | REGISTER

   98 type_specifier: VOID
   99               | CHAR
  100               | SHORT
  101               | INT
  102               | LONG
  103               | FLOAT
  104               | DOUBLE
  105               | SIGNED
  106               | UNSIGNED
  107               | BOOL
  108               | COMPLEX
  109               | IMAGINARY
  110               | struct_or_union_specifier
  111               | enum_specifier
  112               | TYPE_NAME

  113 struct_or_union_specifier: struct_or_union ID LBRACE struct_declaration_list RBRACE
  114                          | struct_or_union LBRACE struct_declaration_list RBRACE
  115                          | struct_or_union ID

  116 struct_or_union: STRUCT
  117                | UNION

  118 struct_declaration_list: struct_declaration
  119                        | struct_declaration_list struct_declaration

  120 struct_declaration: specifier_qualifier_list struct_declarator_list SEMICOLON

  121 specifier_qualifier_list: type_specifier specifier_qualifier_list
  122                         | type_specifier
  123                         | type_qualifier specifier_qualifier_list
  124                         | type_qualifier

  125 struct_declarator_list: struct_declarator
  126                       | struct_declarator_list COMMA struct_declarator

  127 struct_declarator: declarator
  128                  | COLON constant_expression
  129                  | declarator COLON constant_expression

  130 enum_specifier: ENUM LBRACE enumerator_list RBRACE
  131               | ENUM ID LBRACE enumerator_list RBRACE
  132               | ENUM LBRACE enumerator_list COMMA RBRACE
  133               | ENUM ID LBRACE enumerator_list COMMA RBRACE
  134               | ENUM ID

  135 enumerator_list: enumerator
  136                | enumerator_list COMMA enumerator

  137 enumerator: ID
  138           | ID ASSIGN constant_expression

  139 type_qualifier: CONST
  140               | RESTRICT
  141               | VOLATILE

  142 function_specifier: INLINE

  143 declarator: pointer direct_declarator
  144           | direct_declarator

  145 direct_declarator: ID
  146                  | LPAREN declarator RPAREN
  147                  | direct_declarator LBRACK type_qualifier_list assignment_expression RBRACK
  148                  | direct_declarator LBRACK type_qualifier_list RBRACK
  149                  | direct_declarator LBRACK assignment_expression RBRACK
  150                  | direct_declarator LBRACK STATIC type_qualifier_list assignment_expression RBRACK
  151                  | direct_declarator LBRACK type_qualifier_list STATIC assignment_expression RBRACK
  152                  | direct_declarator LBRACK type_qualifier_list ASTERISK RBRACK
  153                  | direct_declarator LBRACK ASTERISK RBRACK
  154                  | direct_declarator LBRACK RBRACK
  155                  | direct_declarator LPAREN parameter_type_list RPAREN
  156                  | direct_declarator LPAREN identifier_list RPAREN
  157                  | direct_declarator LPAREN RPAREN

  158 pointer: ASTERISK
  159        | ASTERISK type_qualifier_list
  160        | ASTERISK pointer
  161        | ASTERISK type_qualifier_list pointer

  162 type_qualifier_list: type_qualifier
  163                    | type_qualifier_list type_qualifier

  164 parameter_type_list: parameter_list
  165                    | parameter_list COMMA ELLIPSIS

  166 parameter_list: parameter_declaration
  167               | parameter_list COMMA parameter_declaration

  168 parameter_declaration: declaration_specifiers declarator
  169                      | declaration_specifiers abstract_declarator
  170                      | declaration_specifiers

  171 identifier_list: ID
  172                | identifier_list COMMA ID

  173 type_name: specifier_qualifier_list
  174          | specifier_qualifier_list abstract_declarator

  175 abstract_declarator: pointer
  176                    | direct_abstract_declarator
  177                    | pointer direct_abstract_declarator

  178 direct_abstract_declarator: LPAREN abstract_declarator RPAREN
  179                           | LBRACK RBRACK
  180                           | LBRACK assignment_expression RBRACK
  181                           | direct_abstract_declarator LBRACK RBRACK
  182                           | direct_abstract_declarator LBRACK assignment_expression RBRACK
  183                           | LBRACK ASTERISK RBRACK
  184                           | direct_abstract_declarator LBRACK ASTERISK RBRACK
  185                           | LPAREN RPAREN
  186                           | LPAREN parameter_type_list RPAREN
  187                           | direct_abstract_declarator LPAREN RPAREN
  188                           | direct_abstract_declarator LPAREN parameter_type_list RPAREN

  189 initializer: assignment_expression
  190            | LBRACE initializer_list RBRACE
  191            | LBRACE initializer_list COMMA RBRACE

  192 initializer_list: initializer
  193                 | designation initializer
  194                 | initializer_list COMMA initializer
  195                 | initializer_list COMMA designation initializer

  196 designation: designator_list ASSIGN

  197 designator_list: designator
  198                | designator_list designator

  199 designator: LBRACK constant_expression RBRACK
  200           | DOT ID

  201 statement: labeled_statement
  202          | compound_statement
  203          | expression_statement
  204          | selection_statement
  205          | iteration_statement
  206          | jump_statement

  207 labeled_statement: ID COLON statement
  208                  | CASE constant_expression COLON statement
  209                  | DEFAULT COLON statement

  210 compound_statement: LBRACE RBRACE
  211                   | LBRACE block_item_list RBRACE

  212 block_item_list: block_item
  213                | block_item_list block_item

  214 block_item: declaration
  215           | statement

  216 expression_statement: SEMICOLON
  217                     | expression SEMICOLON

  218 selection_statement: IF LPAREN expression RPAREN statement
  219                    | IF LPAREN expression RPAREN statement ELSE statement
  220                    | SWITCH LPAREN expression RPAREN statement

  221 iteration_statement: WHILE LPAREN expression RPAREN statement
  222                    | DO statement WHILE LPAREN expression RPAREN SEMICOLON
  223                    | FOR LPAREN expression_statement expression_statement RPAREN statement
  224                    | FOR LPAREN expression_statement expression_statement expression RPAREN statement
  225                    | FOR LPAREN declaration expression_statement RPAREN statement
  226                    | FOR LPAREN declaration expression_statement expression RPAREN statement

  227 jump_statement: GOTO ID SEMICOLON
  228               | CONTINUE SEMICOLON
  229               | BREAK SEMICOLON
  230               | RETURN SEMICOLON
  231               | RETURN expression SEMICOLON

  232 translation_unit: external_declaration
  233                 | translation_unit external_declaration

  234 external_declaration: function_definition
  235                     | declaration

  236 function_definition: declaration_specifiers declarator declaration_list compound_statement
  237                    | declaration_specifiers declarator compound_statement

  238 declaration_list: declaration
  239                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'<' (60) 44
'>' (62) 45
error (256)
ID (258) 3 11 12 113 115 131 133 134 137 138 145 171 172 200 207 227
CONSTANT (259) 4
STRING_LITERAL (260) 5
SIZEOF (261) 23 24
PTR_OP (262) 12
INC_OP (263) 13 20
DEC_OP (264) 14 21
LEFT_OP (265) 41
RIGHT_OP (266) 42
LE_OP (267) 46
LT_OP (268)
GE_OP (269) 47
GT_OP (270)
EQ_OP (271) 49
NEQ_OP (272) 50
ASSIGN (273) 65 92 138 196
AND_OP (274) 58
OR_OP (275) 60
MUL_ASSIGN (276) 66
DIV_ASSIGN (277) 67
MOD_ASSIGN (278) 68
ADD_ASSIGN (279) 69
SUB_ASSIGN (280) 70
LEFT_ASSIGN (281) 71
RIGHT_ASSIGN (282) 72
AND_ASSIGN (283) 73
XOR_ASSIGN (284) 74
OR_ASSIGN (285) 75
TYPE_NAME (286) 112
TYPEDEF (287) 93
EXTERN (288) 94
STATIC (289) 95 150 151
AUTO (290) 96
REGISTER (291) 97
INLINE (292) 142
RESTRICT (293) 140
CHAR (294) 99
SHORT (295) 100
INT (296) 101
LONG (297) 102
SIGNED (298) 105
UNSIGNED (299) 106
FLOAT (300) 103
DOUBLE (301) 104
CONST (302) 139
VOLATILE (303) 141
VOID (304) 98
BOOL (305) 107
COMPLEX (306) 108
IMAGINARY (307) 109
STRUCT (308) 116
UNION (309) 117
ENUM (310) 130 131 132 133 134
ELLIPSIS (311) 165
CASE (312) 208
DEFAULT (313) 209
IF (314) 218 219
ELSE (315) 219
SWITCH (316) 220
WHILE (317) 221 222
DO (318) 222
FOR (319) 223 224 225 226
GOTO (320) 227
CONTINUE (321) 228
BREAK (322) 229
RETURN (323) 230 231
LBRACK (324) 8 147 148 149 150 151 152 153 154 179 180 181 182 183
    184 199
RBRACK (325) 8 147 148 149 150 151 152 153 154 179 180 181 182 183
    184 199
LBRACE (326) 15 16 113 114 130 131 132 133 190 191 210 211
RBRACE (327) 15 16 113 114 130 131 132 133 190 191 210 211
LPAREN (328) 6 9 10 15 16 24 32 146 155 156 157 178 185 186 187 188
    218 219 220 221 222 223 224 225 226
RPAREN (329) 6 9 10 15 16 24 32 146 155 156 157 178 185 186 187 188
    218 219 220 221 222 223 224 225 226
COMMA (330) 16 18 77 90 126 132 133 136 165 167 172 191 194 195
SEMICOLON (331) 79 80 120 216 217 222 227 228 229 230 231
COLON (332) 62 128 129 207 208 209
PLUS (333) 27 38
TIMES (334)
MINUS (335) 28 39
DIVIDE (336) 35
EXCLAMATION (337) 30
QUESTION (338) 62
VERTICAL_BAR (339) 56
TILDE (340) 29
MOD (341) 36
POW (342) 54
AMPERSAND (343) 25 52
ASTERISK (344) 26 34 152 153 158 159 160 161 183 184
DOT (345) 11 200


Nonterminals, with rules where they appear

$accept (93)
    on left: 0
program (94)
    on left: 1 2, on right: 0
primary_expression (95)
    on left: 3 4 5 6, on right: 7
postfix_expression (96)
    on left: 7 8 9 10 11 12 13 14 15 16, on right: 8 9 10 11 12 13
    14 19
argument_expression_list (97)
    on left: 17 18, on right: 10 18
unary_expression (98)
    on left: 19 20 21 22 23 24, on right: 20 21 23 31 64
unary_operator (99)
    on left: 25 26 27 28 29 30, on right: 22
cast_expression (100)
    on left: 31 32, on right: 22 32 33 34 35 36
multiplicative_expression (101)
    on left: 33 34 35 36, on right: 34 35 36 37 38 39
additive_expression (102)
    on left: 37 38 39, on right: 38 39 40 41 42
shift_expression (103)
    on left: 40 41 42, on right: 41 42 43 44 45 46 47
relational_expression (104)
    on left: 43 44 45 46 47, on right: 44 45 46 47 48 49 50
equality_expression (105)
    on left: 48 49 50, on right: 49 50 51 52
and_expression (106)
    on left: 51 52, on right: 52 53 54
exclusive_or_expression (107)
    on left: 53 54, on right: 54 55 56
inclusive_or_expression (108)
    on left: 55 56, on right: 56 57 58
logical_and_expression (109)
    on left: 57 58, on right: 58 59 60
logical_or_expression (110)
    on left: 59 60, on right: 60 61 62
conditional_expression (111)
    on left: 61 62, on right: 62 63 78
assignment_expression (112)
    on left: 63 64, on right: 17 18 64 76 77 147 149 150 151 180 182
    189
assignment_operator (113)
    on left: 65 66 67 68 69 70 71 72 73 74 75, on right: 64
expression (114)
    on left: 76 77, on right: 6 8 62 77 217 218 219 220 221 222 224
    226 231
constant_expression (115)
    on left: 78, on right: 128 129 138 199 208
declaration (116)
    on left: 79 80, on right: 214 225 226 235 238 239
declaration_specifiers (117)
    on left: 81 82 83 84 85 86 87 88, on right: 79 80 82 84 86 88 168
    169 170 236 237
init_declarator_list (118)
    on left: 89 90, on right: 80 90
init_declarator (119)
    on left: 91 92, on right: 89 90
storage_class_specifier (120)
    on left: 93 94 95 96 97, on right: 81 82
type_specifier (121)
    on left: 98 99 100 101 102 103 104 105 106 107 108 109 110 111
    112, on right: 83 84 121 122
struct_or_union_specifier (122)
    on left: 113 114 115, on right: 110
struct_or_union (123)
    on left: 116 117, on right: 113 114 115
struct_declaration_list (124)
    on left: 118 119, on right: 113 114 119
struct_declaration (125)
    on left: 120, on right: 118 119
specifier_qualifier_list (126)
    on left: 121 122 123 124, on right: 120 121 123 173 174
struct_declarator_list (127)
    on left: 125 126, on right: 120 126
struct_declarator (128)
    on left: 127 128 129, on right: 125 126
enum_specifier (129)
    on left: 130 131 132 133 134, on right: 111
enumerator_list (130)
    on left: 135 136, on right: 130 131 132 133 136
enumerator (131)
    on left: 137 138, on right: 135 136
type_qualifier (132)
    on left: 139 140 141, on right: 85 86 123 124 162 163
function_specifier (133)
    on left: 142, on right: 87 88
declarator (134)
    on left: 143 144, on right: 91 92 127 129 146 168 236 237
direct_declarator (135)
    on left: 145 146 147 148 149 150 151 152 153 154 155 156 157,
    on right: 143 144 147 148 149 150 151 152 153 154 155 156 157
pointer (136)
    on left: 158 159 160 161, on right: 143 160 161 175 177
type_qualifier_list (137)
    on left: 162 163, on right: 147 148 150 151 152 159 161 163
parameter_type_list (138)
    on left: 164 165, on right: 155 186 188
parameter_list (139)
    on left: 166 167, on right: 164 165 167
parameter_declaration (140)
    on left: 168 169 170, on right: 166 167
identifier_list (141)
    on left: 171 172, on right: 156 172
type_name (142)
    on left: 173 174, on right: 15 16 24 32
abstract_declarator (143)
    on left: 175 176 177, on right: 169 174 178
direct_abstract_declarator (144)
    on left: 178 179 180 181 182 183 184 185 186 187 188,
    on right: 176 177 181 182 184 187 188
initializer (145)
    on left: 189 190 191, on right: 92 192 193 194 195
initializer_list (146)
    on left: 192 193 194 195, on right: 15 16 190 191 194 195
designation (147)
    on left: 196, on right: 193 195
designator_list (148)
    on left: 197 198, on right: 196 198
designator (149)
    on left: 199 200, on right: 197 198
statement (150)
    on left: 201 202 203 204 205 206, on right: 207 208 209 215 218
    219 220 221 222 223 224 225 226
labeled_statement (151)
    on left: 207 208 209, on right: 201
compound_statement (152)
    on left: 210 211, on right: 202 236 237
block_item_list (153)
    on left: 212 213, on right: 211 213
block_item (154)
    on left: 214 215, on right: 212 213
expression_statement (155)
    on left: 216 217, on right: 203 223 224 225 226
selection_statement (156)
    on left: 218 219 220, on right: 204
iteration_statement (157)
    on left: 221 222 223 224 225 226, on right: 205
jump_statement (158)
    on left: 227 228 229 230 231, on right: 206
translation_unit (159)
    on left: 232 233, on right: 2 233
external_declaration (160)
    on left: 234 235, on right: 232 233
function_definition (161)
    on left: 236 237, on right: 234
declaration_list (162)
    on left: 238 239, on right: 236 239


state 0

    0 $accept: . program $end

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    INLINE     shift, and go to state 7
    RESTRICT   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SIGNED     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    FLOAT      shift, and go to state 15
    DOUBLE     shift, and go to state 16
    CONST      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    VOID       shift, and go to state 19
    BOOL       shift, and go to state 20
    COMPLEX    shift, and go to state 21
    IMAGINARY  shift, and go to state 22
    STRUCT     shift, and go to state 23
    UNION      shift, and go to state 24
    ENUM       shift, and go to state 25

    $default  reduce using rule 1 (program)

    program                    go to state 26
    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35
    translation_unit           go to state 36
    external_declaration       go to state 37
    function_definition        go to state 38


state 1

  112 type_specifier: TYPE_NAME .

    $default  reduce using rule 112 (type_specifier)


state 2

   93 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 93 (storage_class_specifier)


state 3

   94 storage_class_specifier: EXTERN .

    $default  reduce using rule 94 (storage_class_specifier)


state 4

   95 storage_class_specifier: STATIC .

    $default  reduce using rule 95 (storage_class_specifier)


state 5

   96 storage_class_specifier: AUTO .

    $default  reduce using rule 96 (storage_class_specifier)


state 6

   97 storage_class_specifier: REGISTER .

    $default  reduce using rule 97 (storage_class_specifier)


state 7

  142 function_specifier: INLINE .

    $default  reduce using rule 142 (function_specifier)


state 8

  140 type_qualifier: RESTRICT .

    $default  reduce using rule 140 (type_qualifier)


state 9

   99 type_specifier: CHAR .
